ctowasm/test/samples/error/statements/break_not_in_loop_or_switch.c
// Continue statement present outside loop body
// Violates continue statement constraint 6.8.6.3/1 of C17 standard
int main() {
  break;
}